--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Sealog front-end",
+  "name": "sealog-client",
   "version": "0.1.0",
   "license": "MIT",
   "description": "React-Redux based front-end to the Sealog event logging server",
@@ -18,7 +18,7 @@
   "private": false,
   "repository": {
     "type": "git",
-    "url": "https://github.com/webbpinner/sealog-client.git",
+    "url": "https://github.com/webbpinner/sealog-client.git"
   },
   "keywords": [
     "react",
@@ -65,5 +65,5 @@
     "react-addons-test-utils": "^15.5.1",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.2"
-  },
+  }
 }
