--- a/src/url_config.js.dist
+++ b/src/url_config.js.dist
@@ -1,3 +1,3 @@
 export const API_ROOT_URL = `${window.location.protocol}//${window.location.hostname}:8000`;
 export const WS_ROOT_URL = `ws://${window.location.hostname}:8001`;
-export const ROOT_PATH = "";
+export const ROOT_PATH = "/sealog";
