--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-scroll": "^1.5.2",
     "redux": "^3.6.0",
     "redux-form": "^6.6.3",
+    "redux-modal": "^1.4.1",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0"
   },
