--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-cookie": "^2.0.7",
     "react-dom": "^15.5.4",
     "react-file-download": "^0.3.4",
+    "react-fontawesome": "^1.6.1",
     "react-nes": "^1.0.6",
     "react-redux": "5.0.4",
     "react-redux-router": "0.0.5",
