--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "querystring": "^0.2.0",
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
+    "react-bootstrap-theme-switcher": "^1.0.6",
     "react-cookie": "^2.0.7",
     "react-dom": "^15.5.4",
     "react-file-download": "^0.3.4",
@@ -61,6 +62,7 @@
     "babel-preset-react": "^6.1.18",
     "chai": "^3.5.0",
     "chai-jquery": "^2.0.0",
+    "copy-webpack-plugin": "^4.0.1",
     "jquery": "^3.2.1",
     "jsdom": "^9.12.0",
     "mocha": "^3.2.0",
