--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-router-dom": "^4.1.1",
     "react-router-redux": "^5.0.0-alpha.6",
     "react-scroll": "^1.5.2",
+    "react-upload-file": "^2.0.0-beta.6",
     "redux": "^3.6.0",
     "redux-form": "^6.6.3",
     "redux-modal": "^1.4.1",
