--- a/package.json
+++ b/package.json
@@ -70,6 +70,6 @@
     "mocha": "^3.2.0",
     "react-addons-test-utils": "^15.5.1",
     "webpack": "^2.4.1",
-    "webpack-dev-server": "^2.4.2"
+    "webpack-dev-server": "^2.4.2",
   }
 }
