--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
     "test:watch": "npm run test -- --watch",
-    "build": "node ./node_modules/webpack/bin/webpack.js --config webpack.config.js"
+    "build": "node ./node_modules/webpack/bin/webpack.js -p --config webpack.config.js"
   },
   "author": "Webb Pinner",
   "homepage": "https://github.com/webbpinner/",
