--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "bootstrap": "^3.3.7",
     "font-awesome": "^4.7.0",
     "history": "^4.6.3",
+    "js-file-download": "^0.4.1",
+    "json-2-csv": "^2.2.0",
     "lodash": "^4.17.4",
+    "moment": "^2.22.0",
     "nes": "^6.4.2",
     "prop-types": "^15.5.8",
     "querystring": "^0.2.0",
@@ -39,8 +42,10 @@
     "react-bootstrap": "^0.31.0",
     "react-bootstrap-theme-switcher": "^1.0.6",
     "react-cookie": "^2.0.7",
+    "react-datetime": "^2.14.0",
     "react-dom": "^15.5.4",
     "react-file-download": "^0.3.4",
+    "react-file-reader": "^1.1.4",
     "react-fontawesome": "^1.6.1",
     "react-nes": "^1.0.6",
     "react-redux": "5.0.4",
