--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "redux-modal": "^1.4.1",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0",
+    "typeface-roboto": "0.0.54",
     "universal-cookie": "^2.1.2"
   },
   "devDependencies": {
