--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 /node_modules
 npm-debug.log
 .DS_Store
-/dist/themes
-/dist/bundle.js
+/dist/fonts
+/dist/main.bundle.js
 /src/url_config.js
 package-lock.json
 webpack.config.js
