--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "sealog-client",
-  "version": "0.1.0",
+  "name": "sealog-jason",
+  "version": "0.2.0",
   "license": "MIT",
-  "description": "React-Redux based front-end to the Sealog event logging server",
+  "description": "Sealog event-logging client built for sealog-server",
   "bugs": {
     "url": "https://github.com/webbpinner/sealog-client/issues"
   },
   "main": "index.js",
   "scripts": {
-    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
-    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
-    "test:watch": "npm run test -- --watch",
-    "build": "node ./node_modules/webpack/bin/webpack.js -p --config webpack.config.js"
+    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --mode development",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode production"
   },
   "author": "Webb Pinner",
   "homepage": "https://github.com/webbpinner/",
@@ -26,63 +25,48 @@
     "eventlogging"
   ],
   "dependencies": {
-    "axios": "^0.16.1",
-    "babel-preset-stage-1": "^6.1.18",
-    "bootstrap": "^3.3.7",
-    "font-awesome": "^4.7.0",
-    "history": "^4.6.3",
-    "js-file-download": "^0.4.1",
-    "json-2-csv": "^2.2.0",
-    "moment": "^2.22.0",
-    "nes": "^6.4.2",
-    "prop-types": "^15.5.8",
-    "querystring": "^0.2.0",
-    "react": "^15.5.4",
-    "react-bootstrap": "^0.31.0",
-    "react-bootstrap-theme-switcher": "^1.0.6",
-    "react-cookie": "^2.0.7",
-    "react-datetime": "^2.14.0",
-    "react-dom": "^15.5.4",
+    "axios": "^0.18.0",
+    "connected-react-router": "^4.5.0",
+    "js-file-download": "^0.4.4",
+    "moment": "^2.22.2",
+    "moment-duration-format": "^2.2.2",
+    "nes": "^9.0.1",
+    "rc-progress": "^2.2.6",
+    "rc-slider": "^8.6.3",
+    "react": "^16.5.2",
+    "react-bootstrap": "^0.32.4",
+    "react-datetime": "^2.15.0",
+    "react-dom": "^16.5.2",
     "react-file-reader": "^1.1.4",
-    "react-fontawesome": "^1.6.1",
-    "react-nes": "^1.0.6",
-    "react-redux": "5.0.4",
-    "react-redux-router": "0.0.5",
-    "react-router": "^3.0.5",
-    "react-router-bootstrap": "^0.24.2",
-    "react-router-dom": "^4.1.1",
-    "react-router-redux": "^5.0.0-alpha.6",
-    "react-scroll": "^1.5.2",
-    "react-upload-file": "^2.0.0-beta.6",
-    "redux": "^3.6.0",
-    "redux-form": "^6.6.3",
-    "redux-modal": "^1.4.1",
-    "redux-promise": "^0.5.3",
-    "redux-thunk": "^2.2.0",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
+    "react-router-bootstrap": "^0.24.4",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.0",
+    "redux-form": "^7.4.2",
+    "redux-modal": "^2.0.4",
+    "redux-thunk": "^2.3.0",
     "typeface-roboto": "0.0.54",
-    "universal-cookie": "^2.1.2"
+    "universal-cookie": "^3.0.4"
   },
   "devDependencies": {
-    "ajv": "^6.2.1",
-    "babel-core": "^6.2.1",
-    "babel-loader": "^6.2.0",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-react": "^6.1.18",
-    "chai": "^3.5.0",
-    "chai-jquery": "^2.0.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.11",
-    "file-loader": "^1.1.11",
-    "font-awesome-webpack": "0.0.5-beta.2",
-    "jquery": "^3.2.1",
-    "jsdom": "^9.12.0",
-    "less": "^3.0.1",
-    "less-loader": "^4.1.0",
-    "mocha": "^3.2.0",
-    "react-addons-test-utils": "^15.5.1",
-    "style-loader": "^0.20.2",
-    "url-loader": "^1.0.1",
-    "webpack": "^2.7.0",
-    "webpack-dev-server": "^2.4.2"
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/runtime": "^7.1.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.4",
+    "@fortawesome/free-solid-svg-icons": "^5.3.1",
+    "@fortawesome/react-fontawesome": "^0.1.3",
+    "babel-loader": "^8.0.4",
+    "clean-webpack-plugin": "^0.1.19",
+    "css-loader": "^1.0.0",
+    "file-loader": "^2.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.9"
   }
 }
